Add attribute switch-changed to the element. This method is executed, when the switch is clicked. The parameter is the new state.

--- a/example/index.html
+++ b/example/index.html
@@ -78,6 +78,7 @@
     bs-switch
     ng-model="isSelected"
     type="checkbox"
+    switch-changed="logChange(state)"
     switch-active="{{ isActive }}"
     switch-on-text="{{ onText }}"
     switch-off-text="{{ offText }}"
